--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-client": "cd client && npm run build",
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix client",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\""
+    "start": "npm server.js"
   },
   "keywords": [],
   "author": "",
